Update thêm nguồn connect bên thứ 3
